--- a/asp_hw_2/wwwroot/register.html
+++ b/asp_hw_2/wwwroot/register.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Login page</title>
     <style>
-        * {
+        *{
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         body {
@@ -14,6 +14,7 @@
             align-items: center;
             height: 100vh;
         }
+
         form {
             padding: 20px 30px;
             border: 1px solid #dee2e6;
@@ -23,6 +24,7 @@
             gap: 15px;
             width: 300px;
         }
+
         button {
             padding: 10px;
             background-color: #007bff;
@@ -36,19 +38,21 @@
         }
         .error {
             color: darkred;
-
+            padding: 10px;
         }
     </style>
 </head>
 <body>
-    <form method="post" action="/login">
+    <form method="post" action="/register">
         <div class="error">{error}</div>
+        <p>Name</p>
+        <input type="text" name="name" required />
         <p>Username</p>
-        <input type="text" name="username" required/>
+        <input type="text" name="username" required />
         <p>Password</p>
-        <input type="password" name="password" required/>
-        <button>Log in</button>
-        <a href="/register">Register page</a>
+        <input type="password" name="password" required />
+        <button>Register</button>
+        <a href="/login">Log in page</a>
     </form>
 </body>
 </html>
