--- a/asp_hw_2/wwwroot/success.html
+++ b/asp_hw_2/wwwroot/success.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Error</title>
+    <title>Main page</title>
     <style>
+        * {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
         body {
 
             display: flex;
@@ -29,8 +32,9 @@
 </head>
 <body>
     <div>
-        <h2>Welcome</h2>
-        <a href="/login">Go to login page</a>
+        <h2>Welcome {name}</h2>
+        <h4>Your login {username}</h4>
+        <a href="/logout">Log out</a>
     </div>
     
 </body>
